--- a/beatbox.css
+++ b/beatbox.css
@@ -110,41 +110,34 @@ i{
     display: flex;
     justify-content: space-between;
 }
-.volumebar{
+.volumebar {
     display: flex;
-    flex-direction:column;
-    text-align: center;
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: flex-end;
     position: absolute;
-    right: 12vw;
-    width: 55vh;
-    padding-top: 25px;
+    right: 12vw; 
+    width: 55vh; 
+    height: 60px; 
+    padding-top: 20px;
+    gap: 10px;
 }
 
 #volumebar {
-    padding-top: 1px;
-    gap: 10px;
+    width: 100%; 
+    cursor: pointer;
 }
 
 #volumeMute {
     position: absolute;
-    right: 220px;
-    width: 100%;
-    height: 50px;
+    top:34px; 
+    right: 420px; 
+    background: none; 
+    border: none; 
     font-size: 24px; 
-  }
-  #volumeMute:hover{
-    color: #007bff;
-  }
-
-/* #volumebar i {
-    position: absolute;
-    left: 10vw;
     cursor: pointer;
-    font-size: 20px;
-} */
+}
 
-/* #volumebar i:hover {
+#volumeMute:hover {
     color: #007bff;
-} */
-
-
+} 
